# bevy-piet

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
bevy_piet_core/: Cargo.toml
bevy_piet_core/src/: lib.rs
bevy_piet_render/: Cargo.toml
bevy_piet_render/src/: lib.rs  math.rs  render.rs
bevy_piet_text/: Cargo.toml
bevy_piet_text/src/: bundle.rs  lib.rs  render.rs
bevy_piet_vector/: Cargo.toml
bevy_piet_vector/src/: bundle.rs  lib.rs  render.rs  svg_loader.rs  vector_image.rs
example/: text2d.rs
src/: lib.rs
