[package]
name = "bevy-piet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piet_core = { path = "bevy_piet_core" }
bevy_piet_render = { path = "bevy_piet_render" }
bevy_piet_vector = { path = "bevy_piet_vector" }
bevy_piet_text = { path = "bevy_piet_text" }
