[package]
name = "bevy-piet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piet_core = { path = "bevy_piet_core" }
bevy_piet_render = { path = "bevy_piet_render" }
# bevy_piet_vector = { path = "bevy_piet_vector" }
bevy_piet_text = { path = "bevy_piet_text" }

[dev-dependencies]
bevy = {version ="0.9", default-features = false }

[[example]]
name = "text2d"
path = "example/text2d.rs"

[package.metadata.example.text2d]
name = "Text 2D"
description = "Generates text in 2D"
category = "2D Rendering"
wasm = true