[package]
name = "bevy_piet_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piet_render = { path = "../bevy_piet_render" }
# bevy_piet_vector = { path = "../bevy_piet_vector" }
bevy_piet_text = { path = "../bevy_piet_text" }
bevy = {version ="0.9",  default-features = false, features = ["bevy_winit"] }
