[package]
name = "bevy_piet_vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piet_render = { path = "../bevy_piet_render" }
bevy = {version ="0.9", default-features = false, features = ["bevy_winit"] }
piet-gpu = { git = "https://github.com/linebender/piet-gpu.git", rev = "ea6c33b"}
piet-gpu-hal = { git = "https://github.com/linebender/piet-gpu.git", rev = "ea6c33b"}
anyhow = "1.0.4"
kurbo = "0.8.3"